--- a/templates/admin/products.html
+++ b/templates/admin/products.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="admin-header">
         <h1><i class="fas fa-box-open"></i> Управление товарами</h1>
-        <a href="{{ url_for('admin_add_product') }}" class="btn btn-success"> <!-- Исправлен URL -->
+        <a href="{{ url_for('admin_add_product') }}" class="btn btn-success">
             <i class="fas fa-plus"></i> Добавить товар
         </a>
     </div>
